# scrapy

./: README.md  README.rst  app.py  main.py  pyproject.toml
docs/: README.rst  requirements.txt
